--- a/Helper/Helper.nuspec
+++ b/Helper/Helper.nuspec
@@ -13,6 +13,6 @@
     <description>$description$</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2014</copyright>
-    <tags>Windows Universal App</tags>
+    <tags>Tag1 Tag2</tags>
   </metadata>
 </package>
