--- a/Nuget/Univapps/Univapps.nuspec
+++ b/Nuget/Univapps/Univapps.nuspec
@@ -6,7 +6,7 @@
     <authors>Vapps</authors>
     <owners>Vapps</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>PCL toolkit for Universal App</description>
+    <description>Helper toolkit for Universal App PCL</description>
     <releaseNotes>Add RegisterBackgroundTask function</releaseNotes>
     <copyright>Copyright 2014</copyright>
   </metadata>
